--- a/VaccineManagementSystem/src/UI/MainJFrame.form
+++ b/VaccineManagementSystem/src/UI/MainJFrame.form
@@ -97,7 +97,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                   <Component id="btn_login" min="-2" pref="39" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
