--- a/VaccineManagementSystem/src/UI/SystemAdminWorkArea/SystemAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/SystemAdminWorkArea/SystemAdminWorkArea.form
@@ -59,7 +59,7 @@
                           <Component id="btnManageDisease" linkSize="1" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnManageEnterprise" linkSize="1" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnManageEnterpriseAdmin" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btnExit" alignment="0" max="32767" attributes="0"/>
+                          <Component id="btnLogout" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnManageVaccine" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -80,7 +80,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnManageVaccine" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="190" max="32767" attributes="0"/>
-                      <Component id="btnExit" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnLogout" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -113,9 +113,9 @@
                 <Property name="text" type="java.lang.String" value="Manage Enterprise Admin"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="btnExit">
+            <Component class="javax.swing.JButton" name="btnLogout">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Exit"/>
+                <Property name="text" type="java.lang.String" value="Logout"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnManageVaccine">
