--- a/VaccineManagementSystem/src/UI/SystemAdminWorkArea/SystemAdminWorkArea.form
+++ b/VaccineManagementSystem/src/UI/SystemAdminWorkArea/SystemAdminWorkArea.form
@@ -140,7 +140,7 @@
         <Container class="javax.swing.JPanel" name="workArea">
           <Properties>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[800, 800]"/>
+              <Dimension value="[1100, 800]"/>
             </Property>
           </Properties>
           <Constraints>
@@ -149,18 +149,7 @@
             </Constraint>
           </Constraints>
 
-          <Layout>
-            <DimensionLayout dim="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="927" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-            <DimensionLayout dim="1">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="669" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-          </Layout>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
         </Container>
       </SubComponents>
     </Container>
