--- a/VaccineManagementSystem/src/UI/Hospital/Clinic/ClinicWorkArea.form
+++ b/VaccineManagementSystem/src/UI/Hospital/Clinic/ClinicWorkArea.form
@@ -269,6 +269,9 @@
               <Image iconType="2" name="C:\Users\jkkn7\Downloads\lo.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel7MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="1028" y="12" width="-1" height="-1"/>
